Amarok ChangeLog
================
(C) 2002-2009 the Amarok authors.

VERSION 2.2
  CHANGES:
    * More collection scanning speedups.

  BUGFIXES:
    * Fix some tracks' tags not being saved correctly to the database.
      (BR 202021)

VERSION 2.2-rc1
  FEATURES:
    * Import itpc:// podcast urls (BR 206615).
    * Mark podcast episode as not-new when starting to play it.
    * Reintroduced indicator icons for new podcast episodes.
    * Added "subscribe" command line switch to add a podcast channel.

  CHANGES:
    * Removed Shoutcast Directory service due to technical and other issues.
    * Made audio CDs respect the "Automatically retrieve cover art" setting.
    * TagLib 1.6 built with ASF and MP4 support is now required. This release
      of TagLib fixes many, many bugs and contains new format support.
    * TagLib-Extras 1.0.0 is now required. This release is compatible with the
      new TagLib 1.6 release.
    * Removed non working menu entry "rename" from the Bookmark Manager. This
      functionality is no longer needed as inline renaming is possible.
    * Improvements for volume widget in ToolbarNG.
    * Added "Lock layout" option to the main window's context menu.    

  BUGFIXES:
    * Crash in QTextCodec while scanning collection has been fixed.
      Apparently. (BR 191447)
    * A dialog with "Can not write playlist (/)" was displayed when using
      saving from within a script. (BR 206659)
    * Fixed playlist grouping mode not getting correctly applied on startup. 
      (BR 208087)
    * Fixed track queue getting "lost" when switching between different track 
      navigators. (BR 205920)
    * Implemented proper check for running instance options on the command
      line. (BR 207988)
    * Improved visibility of the Context View's menus. (BR 198221)
    * Fixed crash when using the eject action on an audio CD collection while
      a track from the CD is playing. Instead playback is now stopped before 
      the CD is ejected.