@@ -7,6 +7,8 @@ VERSION 2.2
     * More collection scanning speedups.
 
   BUGFIXES:
+    * Fix the Various Artist node sometimes being shown in the Collection
+      Browser with nothing underneath it (or an empty "Unknown" album).
     * Fix some tracks' tags not being saved correctly to the database.
       (BR 202021)
 
